# mlir-standalone-template

./: CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
build_tools/: build_proj.sh
include/Standalone/: CMakeLists.txt  StandaloneDialect.h  StandaloneOps.h  StandaloneOps.td
include/Standalone/Dialect/Standalone/: CMakeLists.txt  Dialect.h  MLIRGen.h  Ops.h  Ops.td  Passes.h  Passes.td  STDA.td  ShapeInferenceInterface.h  ShapeInferenceInterface.td
include/Standalone/Parser/: AST.h  Lexer.h  Parser.h
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Conversion/STDAToAffine/: CMakeLists.txt  STDAToAffine.cpp
lib/Conversion/STDAToLLVM/: CMakeLists.txt  STDAToLLVM.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Standalone/: CMakeLists.txt  MLIRGen.cpp  Passes.cpp  ShapeInferencePass.cpp  StandaloneDialect.cpp  StandaloneOps.cpp
lib/STDAParser/: AST.cpp  CMakeLists.txt
lib/Standalone/: StandaloneDialect.cpp  StandaloneOps.cpp
standalone-compiler/: CMakeLists.txt  standalone-compiler.cpp
standalone-compiler/include/standalone/: AST.h  Lexer.h  Parser.h
standalone-compiler/parser/: AST.cpp
standalone-opt/: CMakeLists.txt
standalone-translate/: CMakeLists.txt  standalone-translate.cpp
test/: CMakeLists.txt  lit.cfg.py
test/Conversion/: stda-tollvm.mlir  stdaprint-tollvm.mlir
test/Runner/: print.mlir.placeholder
test/Standalone/: compiler-ast.stda  compiler-e2e.stda  compiler-mlir.stda  dummy.mlir  lower-toaffine.mlir  opt-combine.mlir  opt-inliner.mlir  opt-reshape.mlir  opt-roundtrip.mlir  opt-shapeinfer.mlir  standalone-compiler.stda  standalone-opt.mlir  stda-translate.mlir
test/Translate/: stda-translate.mlir
tools/: CMakeLists.txt
tools/stda-compiler/: CMakeLists.txt  stda-compiler.cpp
tools/stda-opt/: CMakeLists.txt  stda-opt.cpp
tools/stda-translate/: CMakeLists.txt  stda-translate.cpp
